<resources>
    <!--Bottom Navigation Titles-->
    <string name="app_name">Football News</string>
    <string name="title_news">News</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_teams">Teams</string>
    <string name="title_players">Players</string>
    <string name="title_weather">Weather</string>
    <string name="title_about">About</string>

    <!--News Feed Titles-->
    <!--    <string name="title_news">News Feed</string>-->
    <!--    <string name="title_news">News Feed</string>-->
    <!--    <string name="title_news">News Feed</string>-->

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    <string-array name="cities">
        <item>Karachi</item>
        <item>Lahore</item>
        <item>Faisalabad</item>
        <item>Rawalpindi</item>
        <item>Gujranwala</item>
        <item>Peshawar</item>
        <item>Multan</item>
        <item>Saidu Sharif</item>
        <item>Hyderabad City</item>
        <item>Islamabad</item>
        <item>Quetta</item>
        <item>Bahawalpur</item>
        <item>Sargodha</item>
        <item>Sialkot City</item>
        <item>Sukkur</item>
        <item>Larkana</item>
        <item>Chiniot</item>
        <item>Shekhupura</item>
        <item>Jhang City</item>
        <item>Dera Ghazi Khan</item>
        <item>Gujrat</item>
        <item>Rahimyar Khan</item>
        <item>Kasur</item>
        <item>Mardan</item>
        <item>Mingaora</item>
        <item>Nawabshah</item>
        <item>Sahiwal</item>
        <item>Mirpur Khas</item>
        <item>Okara</item>
        <item>Mandi Burewala</item>
        <item>Jacobabad</item>
        <item>Saddiqabad</item>
        <item>Kohat</item>
        <item>Muridke</item>
        <item>Muzaffargarh</item>
        <item>Khanpur</item>
        <item>Gojra</item>
        <item>Mandi Bahauddin</item>
        <item>Abbottabad</item>
        <item>Turbat</item>
        <item>Dadu</item>
        <item>Bahawalnagar</item>
        <item>Khuzdar</item>
        <item>Pakpattan</item>
        <item>Tando Allahyar</item>
        <item>Ahmadpur East</item>
        <item>Vihari</item>
        <item>Jaranwala</item>
        <item>New Mirpur</item>
        <item>Kamalia</item>
        <item>Kot Addu</item>
        <item>Nowshera</item>
        <item>Swabi</item>
        <item>Khushab</item>
        <item>Dera Ismail Khan</item>
        <item>Chaman</item>
        <item>Charsadda</item>
        <item>Kandhkot</item>
        <item>Chishtian</item>
        <item>Hasilpur</item>
        <item>Attock Khurd</item>
        <item>Muzaffarabad</item>
        <item>Mianwali</item>
        <item>Jalalpur Jattan</item>
        <item>Bhakkar</item>
        <item>Zhob</item>
        <item>Dipalpur</item>
        <item>Kharian</item>
        <item>Mian Channun</item>
        <item>Bhalwal</item>
        <item>Jamshoro</item>
        <item>Pattoki</item>
        <item>Harunabad</item>
        <item>Kahror Pakka</item>
        <item>Toba Tek Singh</item>
        <item>Samundri</item>
        <item>Shakargarh</item>
        <item>Sambrial</item>
        <item>Shujaabad</item>
        <item>Hujra Shah Muqim</item>
        <item>Kabirwala</item>
        <item>Mansehra</item>
        <item>Lala Musa</item>
        <item>Chunian</item>
        <item>Nankana Sahib</item>
        <item>Bannu</item>
        <item>Pasrur</item>
        <item>Timargara</item>
        <item>Parachinar</item>
        <item>Chenab Nagar</item>
        <item>Gwadar</item>
        <item>Abdul Hakim</item>
        <item>Hassan Abdal</item>
        <item>Tank</item>
        <item>Hangu</item>
        <item>Risalpur Cantonment</item>
        <item>Karak</item>
        <item>Kundian</item>
        <item>Umarkot</item>
        <item>Chitral</item>
        <item>Dainyor</item>
        <item>Kulachi</item>
        <item>Kalat</item>
        <item>Kotli</item>
        <item>Gilgit</item>
        <item>Narowal</item>
        <item>Khairpur Mir’s</item>
        <item>Khanewal</item>
        <item>Jhelum</item>
        <item>Haripur</item>
        <item>Shikarpur</item>
        <item>Rawala Kot</item>
        <item>Hafizabad</item>
        <item>Lodhran</item>
        <item>Malakand</item>
        <item>Attock City</item>
        <item>Batgram</item>
        <item>Matiari</item>
        <item>Ghotki</item>
        <item>Naushahro Firoz</item>
        <item>Alpurai</item>
        <item>Bagh</item>
        <item>Daggar</item>
        <item>Leiah</item>
        <item>Tando Muhammad Khan</item>
        <item>Chakwal</item>
        <item>Badin</item>
        <item>Lakki</item>
        <item>Rajanpur</item>
        <item>Dera Allahyar</item>
        <item>Shahdad Kot</item>
        <item>Pishin</item>
        <item>Sanghar</item>
        <item>Upper Dir</item>
        <item>Thatta</item>
        <item>Dera Murad Jamali</item>
        <item>Kohlu</item>
        <item>Mastung</item>
        <item>Dasu</item>
        <item>Athmuqam</item>
        <item>Loralai</item>
        <item>Barkhan</item>
        <item>Musa Khel Bazar</item>
        <item>Ziarat</item>
        <item>Gandava</item>
        <item>Sibi</item>
        <item>Dera Bugti</item>
        <item>Eidgah</item>
        <item>Uthal</item>
        <item>Khuzdar</item>
        <item>Chilas</item>
        <item>Panjgur</item>
        <item>Gakuch</item>
        <item>Qila Saifullah</item>
        <item>Kharan</item>
        <item>Aliabad</item>
        <item>Awaran</item>
        <item>Dalbandin</item>
    </string-array>
    <string name="title_activity_portal">Portal</string>

    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>The Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo, Republic of the</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Costa Rica</item>
        <item>Cote dIvoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor (Timor-Leste)</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>The Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, North</item>
        <item>Korea, South</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar (Burma)</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States of America</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City (Holy See)</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="player_name">Player</string>
    <string name="team_name">Team</string>
</resources>